Fixed container widths. Fixed button and icon ul alignment.

--- a/src/component/layout-component/Header/Header.css
+++ b/src/component/layout-component/Header/Header.css
@@ -1,5 +1,5 @@
 .header-logo {
-  width: 40px;
+  width: 50px;
 }
 
 .mobile-close {
